[metadata]
name = edge-tts
version = 5.0.3
author = rany
author_email = ranygh@riseup.net
description = Microsoft Edge's TTS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rany2/edge-tts
project_urls =
    Bug Tracker=https://github.com/rany2/edge-tts/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir=
    = src
packages = find:
python_requires = >=3.7
install_requires = file: requirements.txt

[options.packages.find]
where=src
   
[options.entry_points]
console_scripts =
    edge-tts = edge_tts.__main__:main
    edge-playback = edge_playback.__init__:main
